Update READMEs with information about building and contributing